--- a/src/main/resources/storage-messages.properties
+++ b/src/main/resources/storage-messages.properties
@@ -1,2 +1,7 @@
-errors.missing-key=Key ''{0}'' is not associated with a value.
-errors.duplicate-key=Key ''{0}'' is already associated with a value.
+errors.access.missing-key=Key ''{0}'' is not associated with a value.
+errors.access.duplicate-key=Key ''{0}'' is already associated with a value.
+errors.persistence.write=Failed to persist value associated with key ''{0}''.
+errors.persistence.read=Failed to load value associated with key ''{0}''.
+errors.persistence.read-storage=Failed to read persistent storage.
+errors.persistence.clean-storage=Failed to clean persistent storage.
+errors.access.service-unavailable=Service is unavailable at the moment.
